Fixes to i2c output setup.  Fix the name of the config files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,10 @@ INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src )
 
 ADD_EXECUTABLE( hnswitchd ${HNSWITCHD_SRC} )
 TARGET_LINK_LIBRARIES( hnswitchd PRIVATE Poco::Foundation Poco::Net Poco::NetSSL Poco::JSON )
-TARGET_LINK_LIBRARIES( hnswitchd PRIVATE "-ldaemon" )
+#TARGET_LINK_LIBRARIES( hnswitchd PRIVATE "-ldaemon" )
 TARGET_LINK_LIBRARIES( hnswitchd PRIVATE "-li2c" )
-TARGET_LINK_LIBRARIES( hnswitchd PRIVATE ${LIBXML2_LIBRARIES} )
-TARGET_LINK_LIBRARIES( hnswitchd PRIVATE ${Boost_LIBRARIES} )
+#TARGET_LINK_LIBRARIES( hnswitchd PRIVATE ${LIBXML2_LIBRARIES} )
+#TARGET_LINK_LIBRARIES( hnswitchd PRIVATE ${Boost_LIBRARIES} )
 
 ADD_EXECUTABLE( hnswitchd_client ${HNSWITCHD_CLIENT_SRC} ) 
 TARGET_LINK_LIBRARIES( hnswitchd_client ${Boost_LIBRARIES} )
