--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
 PROJECT( hnode_switchd ) 
 
-SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )
+#SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )
 
 SET( HNSWITCHD_SRC
      ${CMAKE_SOURCE_DIR}/src/daemon/hnswitchd.cpp
@@ -19,22 +19,13 @@ SET( HNSWITCHD_CLIENT_SRC
 SET(CMAKE_BUILD_TYPE Debug)
 
 FIND_PACKAGE( Poco REQUIRED Foundation Net NetSSL JSON )
-FIND_PACKAGE(Boost 1.49.0 COMPONENTS program_options REQUIRED) 
-FIND_PACKAGE(LibXml2 REQUIRED)
 
 INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/include )
-INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
-INCLUDE_DIRECTORIES( ${LIBXML2_INCLUDE_DIR} )
-
-INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src )
 
 ADD_EXECUTABLE( hnswitchd ${HNSWITCHD_SRC} )
 TARGET_LINK_LIBRARIES( hnswitchd PRIVATE Poco::Foundation Poco::Net Poco::NetSSL Poco::JSON )
-#TARGET_LINK_LIBRARIES( hnswitchd PRIVATE "-ldaemon" )
 TARGET_LINK_LIBRARIES( hnswitchd PRIVATE "-li2c" )
-#TARGET_LINK_LIBRARIES( hnswitchd PRIVATE ${LIBXML2_LIBRARIES} )
-#TARGET_LINK_LIBRARIES( hnswitchd PRIVATE ${Boost_LIBRARIES} )
 
-ADD_EXECUTABLE( hnswitchd_client ${HNSWITCHD_CLIENT_SRC} ) 
-TARGET_LINK_LIBRARIES( hnswitchd_client ${Boost_LIBRARIES} )
+ADD_EXECUTABLE( hnswitchd_client ${HNSWITCHD_CLIENT_SRC} )
+TARGET_LINK_LIBRARIES( hnswitchd_client PRIVATE Poco::Foundation Poco::Net Poco::NetSSL Poco::JSON )
 
