Start of some basic logging functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT( hnode_switchd )
 SET( HNSWITCHD_SRC
      ${CMAKE_SOURCE_DIR}/src/daemon/hnswitchd.cpp
      ${CMAKE_SOURCE_DIR}/src/daemon/HNSwitchDaemon.cpp
+     ${CMAKE_SOURCE_DIR}/src/daemon/HNDaemonLog.cpp
      ${CMAKE_SOURCE_DIR}/src/daemon/HNScheduleMatrix.cpp
      ${CMAKE_SOURCE_DIR}/src/daemon/HNSwitchManager.cpp
      ${CMAKE_SOURCE_DIR}/src/daemon/HNodeSWDPacket.cpp
