--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,22 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
-PROJECT( hnode_switchd ) 
+PROJECT( hnode2-switchd ) 
+
+SET( MAJOR_VERSION 2 )
+SET( MINOR_VERSION 0 )
+SET( PATCH_VERSION 0 )
+SET( RELEASE_VERSION 0 )
 
 #SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )
+
+# Default the install prefix to just /usr
+IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  SET( CMAKE_INSTALL_PREFIX /usr CACHE PATH "Default to /usr install" FORCE )
+ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+
+SET( VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} )
+SET( DEBVERSION ${VERSION}-${RELEASE_VERSION} )
+
+ADD_DEFINITIONS( -DVERSION=${VERSION} )
 
 SET( HNSWITCHD_SRC
      ${CMAKE_SOURCE_DIR}/src/daemon/hnswitchd.cpp
@@ -18,6 +33,10 @@ SET( HNSWITCHD_CLIENT_SRC
      ${CMAKE_SOURCE_DIR}/src/client/HNSWDPacketClient.cpp
 )
 
+SET( HNSWITCHD_DEV_HDR
+     ${CMAKE_SOURCE_DIR}/src/include/HNSwitchDaemon.h
+)
+
 SET(CMAKE_BUILD_TYPE Debug)
 
 FIND_PACKAGE( Poco REQUIRED Foundation Net NetSSL JSON )
@@ -30,4 +49,30 @@ TARGET_LINK_LIBRARIES( hnswitchd PRIVATE "-li2c" )
 
 ADD_EXECUTABLE( hnswitchd_client ${HNSWITCHD_CLIENT_SRC} )
 TARGET_LINK_LIBRARIES( hnswitchd_client PRIVATE Poco::Foundation Poco::Net Poco::NetSSL Poco::JSON )
+
+INSTALL( TARGETS hnswitchd DESTINATION ${CMAKE_INSTALL_PREFIX}/sbin COMPONENT daemon )
+INSTALL( TARGETS hnswitchd_client DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT client )
+INSTALL( FILES ${HNSWITCHD_DEV_HDR} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/hnode2 COMPONENT dev )
+
+SET( CPACK_GENERATOR "DEB" )
+
+SET( CPACK_DEB_COMPONENT_INSTALL 1 )
+SET( CPACK_COMPONENTS_ALL daemon client dev )
+
+SET( CPACK_PACKAGE_VERSION_MAJOR ${MAJOR_VERSION} )
+SET( CPACK_PACKAGE_VERSION_MINOR ${MINOR_VERSION} )
+SET( CPACK_PACKAGE_VERSION_PATCH ${PATCH_VERSION} )
+
+SET( CPACK_PACKAGE_DESCRIPTION "Provides a interface and scheduling for control of low level switching devices such as i2c gpio expanders." )
+SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "The hnode2 low-level switch-daemon" )
+SET( CPACK_PACKAGE_CONTACT "Curtis Nottberg" )
+SET( CPACK_PACKAGE_ARCHITECTURE DEB-DEFAULT )
+
+SET( CPACK_DEBIAN_PACKAGE_PRIORITY "optional" )
+SET( CPACK_DEBIAN_PACKAGE_SECTION "Daemon" )
+SET( CPACK_DEBIAN_PACKAGE_MAINTAINER "Curtis Nottberg" ) #required
+SET( CPACK_DEBIAN_PACKAGE_VERSION ${DEBVERSION} )
+SET( CPACK_DEBIAN_FILE_NAME DEB-DEFAULT )
+
+INCLUDE(CPack)
 
