Cleanup of cmake find structure to work with newer Ubuntu releases, which have a signaificantly different packaging for libpoco.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 PROJECT( hnode2-switchd ) 
 
 SET( MAJOR_VERSION 2 )
-SET( MINOR_VERSION 1 )
+SET( MINOR_VERSION 2 )
 SET( PATCH_VERSION 0 )
 SET( RELEASE_VERSION 0 )
 
@@ -14,6 +14,8 @@ SET( DAEMON_NAME hnswitchd )
 IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   SET( CMAKE_INSTALL_PREFIX /usr CACHE PATH "Default to /usr install" FORCE )
 ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake) 
 
 SET( VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} )
 SET( DEBVERSION ${VERSION}-${RELEASE_VERSION} )
@@ -41,16 +43,27 @@ SET( HNSWITCHD_DEV_HDR
 
 SET(CMAKE_BUILD_TYPE Debug)
 
-FIND_PACKAGE( Poco REQUIRED Foundation Net NetSSL JSON )
+FIND_PACKAGE( Poco REQUIRED Util Foundation Net NetSSL JSON )
+FIND_PACKAGE( I2C REQUIRED )
 
 INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/include )
 
 ADD_EXECUTABLE( hnswitchd ${HNSWITCHD_SRC} )
-TARGET_LINK_LIBRARIES( hnswitchd PRIVATE Poco::Foundation Poco::Net Poco::NetSSL Poco::JSON )
-TARGET_LINK_LIBRARIES( hnswitchd PRIVATE "-li2c" )
+TARGET_LINK_LIBRARIES( hnswitchd PRIVATE 
+    ${Poco_Util_LIBRARY}
+    ${Poco_Foundation_LIBRARY}
+    ${Poco_Net_LIBRARY}
+    ${Poco_NetSSL_LIBRARY}
+    ${Poco_JSON_LIBRARY} )
+TARGET_LINK_LIBRARIES( hnswitchd PRIVATE ${I2C_DEVICE_LIBRARY} )
 
 ADD_EXECUTABLE( hnswitchd_client ${HNSWITCHD_CLIENT_SRC} )
-TARGET_LINK_LIBRARIES( hnswitchd_client PRIVATE Poco::Foundation Poco::Net Poco::NetSSL Poco::JSON )
+TARGET_LINK_LIBRARIES( hnswitchd_client PRIVATE 
+    ${Poco_Util_LIBRARY}
+    ${Poco_Foundation_LIBRARY}
+    ${Poco_Net_LIBRARY}
+    ${Poco_NetSSL_LIBRARY}
+    ${Poco_JSON_LIBRARY} )
 
 INSTALL( TARGETS hnswitchd DESTINATION ${CMAKE_INSTALL_PREFIX}/sbin COMPONENT daemon )
 
